--- a/scripts/helm.yaml
+++ b/scripts/helm.yaml
@@ -1,5 +1,6 @@
 stack:
   admin: admin
+  bot:
   cache:
   client: client
   database: database
@@ -29,6 +30,20 @@ admin:
   targetCPUUtilizationPercentage: 50
   env:
     SENTRY_PUBLIC_DSN: #sentryPublicDSN
+
+bot:
+  replicas: 1
+  autoscale: false
+  minReplicas: 1
+  maxReplicas: 1
+  targetCPUUtilizationPercentage: 50
+  secrets:
+    ADMIN_PASSWORD: user.server-template-admin.auth
+    USER_PASSWORD: user.server-template-user.auth
+  env:
+    SENTRY_DSN: #sentryDSN
+    DEBUG: false
+    ENV: production
 
 client:
   replicas: 1
