--- a/package.json
+++ b/package.json
@@ -103,7 +103,7 @@
   "keywords": [
     "orig-template",
     "server-template",
-    "customername",
+    "companyname",
     "wepapp",
     "react",
     "node.js",
