--- a/server/Dockerfile.build
+++ b/server/Dockerfile.build
@@ -4,6 +4,11 @@ ARG TARGET_ENV=prod
 ENV TARGET_ENV ${TARGET_ENV}
 ENV NODE_ENV development
 RUN apk add --update-cache build-base python git fontconfig
+# Required by the current flow version (can be removed later?)
+RUN apk --no-cache add ca-certificates wget && \
+  wget -q -O /etc/apk/keys/sgerrand.rsa.pub https://raw.githubusercontent.com/sgerrand/alpine-pkg-glibc/master/sgerrand.rsa.pub && \
+  wget https://github.com/sgerrand/alpine-pkg-glibc/releases/download/2.27-r0/glibc-2.27-r0.apk && \
+  apk add glibc-2.27-r0.apk
 WORKDIR /server
 COPY ./package.json /server/package.json
 # TODO for local development: RUN npm install nodemon -g
@@ -12,6 +17,9 @@ COPY . /server
 # TODO for local development: EXPOSE 3332
 RUN if [[ ${TARGET_ENV} != "local" ]]; then npm run build:prod; fi
 # TODO for local development: CMD ["npm", "run", "start"]
+RUN npm run flow
+RUN npm run unit
+RUN npm run build:prod
 
 # Production runtime
 FROM node:8.7-alpine
