--- a/admin/.babelrc
+++ b/admin/.babelrc
@@ -14,7 +14,7 @@
   "env": {
     // When testing we want to compile modules to commonjs
     "test": {
-      "presets": ["es2015", "stage-2", "react"]
+      "presets": ["es2015", "stage-2", "react", "flow"]
     },
     "development": {
       "plugins": ["babel-plugin-styled-components", "react-hot-loader/babel"]
