--- a/admin/package.json
+++ b/admin/package.json
@@ -6,6 +6,7 @@
   "main": "index.js",
   "scripts": {
     "unit": "BABEL_ENV=test jest",
+    "flow": "flow",
     "lint": "eslint . --ignore-path .eslintignore --quiet",
     "start":
       "webpack-dev-server --config ./config/webpack.dev.js --public=localhost:8080",
@@ -59,6 +60,7 @@
     "babel-plugin-styled-components": "^1.3.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.7",
@@ -66,14 +68,16 @@
     "eslint-config-airbnb": "14.1.0",
     "eslint-config-airbnb-base": "11.1.2",
     "eslint-config-prettier": "^2.3.0",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-babel": "^4.1.2",
     "eslint-plugin-import": "2.2.0",
     "eslint-plugin-jsx-a11y": "4.0.0",
     "eslint-plugin-prettier": "^2.1.2",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-babel": "^4.1.2",
     "eslint-plugin-react": "^6.9.0",
     "extract-text-webpack-plugin": "^3.0.1",
     "file-loader": "^1.1.5",
+    "flow-bin": "^0.66.0",
+    "flow-webpack-plugin": "^1.2.0",
     "html-webpack-plugin": "^2.30.1",
     "jest": "^20.0.0",
     "json-loader": "^0.5.7",
