--- a/client/package.json
+++ b/client/package.json
@@ -6,15 +6,16 @@
   "main": "index.js",
   "scripts": {
     "unit": "BABEL_ENV=test jest",
+    "flow": "flow",
     "lint": "eslint . --ignore-path .eslintignore --quiet",
-    "start":
-      "webpack-dev-server --config ./config/webpack.dev.js --public=localhost:8080",
+    "start": "webpack-dev-server --config ./config/webpack.dev.js --public=localhost:8080",
     "build": "NODE_ENV=production webpack -p --config ./config/webpack.prod.js",
-    "analyze":
-      "ANALYZE=true NODE_ENV=production webpack -p --config ./config/webpack.prod.js"
+    "analyze": "ANALYZE=true NODE_ENV=production webpack -p --config ./config/webpack.prod.js"
   },
   "jest": {
-    "setupFiles": ["./config/setup-jest.js"]
+    "setupFiles": [
+      "./config/setup-jest.js"
+    ]
   },
   "repository": {
     "type": "git",
@@ -76,6 +77,8 @@
     "eslint-plugin-prettier": "^2.1.2",
     "eslint-plugin-react": "^7.0.0",
     "file-loader": "^1.1.5",
+    "flow-bin": "^0.66.0",
+    "flow-webpack-plugin": "^1.2.0",
     "html-webpack-plugin": "^2.30.1",
     "jest": "^21.0.2",
     "json-loader": "^0.5.7",
