chore: Disabled precommit/prepush at least for now (some problems)

--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "contacts-maintenance": "cat PROJECT.md | sed -n -e '/^## Maintenance.*$/,/^#.*$/{ /^## Maintenance.*$/d; /^#.*$/d; p; }'",
     "clean:storage": "rm -rf ./storage/bucket/*; rm -rf ./storage/.minio.sys/buckets/bucket/*/",
     "flow": "echo DISABLED flow",
-    "precommit": "echo 'NOTE: Running precommit inside taito container' && taito taito-precommit",
-    "prepush": "echo 'NOTE: Running prepush inside taito container' && taito taito-prepush",
+    "precommit": "echo 'NOTE: Running precommit inside taito container' && echo taito taito-precommit",
+    "prepush": "echo 'NOTE: Running prepush inside taito container' && echo taito taito-prepush",
     "taito-precommit": "echo 'SKIP: Skip linting on commit since we are already continuously linting during development.'",
     "taito-prepush": "npm-run-all --parallel lint flow unit",
     "commit": "echo 'Running commitizen locally' && git-cz",
