--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -8,8 +8,9 @@ RUN apk --no-cache add ca-certificates wget && \
   wget https://github.com/sgerrand/alpine-pkg-glibc/releases/download/2.27-r0/glibc-2.27-r0.apk && \
   apk add glibc-2.27-r0.apk
 WORKDIR /client
-COPY ./package.json /client/package.json
-RUN npm install --loglevel warn
 COPY . /client
+RUN npm install --loglevel warn
+# NOTE: postinstall fails in previous step because of root user so we run it manually
+RUN npm run postinstall
 EXPOSE 3333
 CMD ["npm", "run", "start"]
