--- a/client/package.json
+++ b/client/package.json
@@ -5,9 +5,10 @@
   "private": true,
   "main": "index.js",
   "scripts": {
-    "unit": "BABEL_ENV=test jest",
+    "postinstall": "flow-typed install",
     "flow": "flow",
     "lint": "eslint . --ignore-path .eslintignore --quiet",
+    "unit": "BABEL_ENV=test jest",
     "start": "webpack-dev-server --config ./config/webpack.dev.js --public=localhost:8080",
     "build": "NODE_ENV=production webpack -p --config ./config/webpack.prod.js",
     "analyze": "ANALYZE=true NODE_ENV=production webpack -p --config ./config/webpack.prod.js"
@@ -78,6 +79,7 @@
     "eslint-plugin-react": "^7.0.0",
     "file-loader": "^1.1.5",
     "flow-bin": "^0.66.0",
+    "flow-typed": "^2.3.0",
     "flow-webpack-plugin": "^1.2.0",
     "html-webpack-plugin": "^2.30.1",
     "jest": "^21.0.2",
