--- a/server/Dockerfile.build
+++ b/server/Dockerfile.build
@@ -10,13 +10,10 @@ RUN apk --no-cache add ca-certificates wget && \
   wget https://github.com/sgerrand/alpine-pkg-glibc/releases/download/2.27-r0/glibc-2.27-r0.apk && \
   apk add glibc-2.27-r0.apk
 WORKDIR /server
-COPY ./package.json /server/package.json
-# TODO for local development: RUN npm install nodemon -g
-RUN npm install --loglevel warn
 COPY . /server
-# TODO for local development: EXPOSE 3332
-RUN if [[ ${TARGET_ENV} != "local" ]]; then npm run build:prod; fi
-# TODO for local development: CMD ["npm", "run", "start"]
+RUN npm install --loglevel warn
+# NOTE: postinstall fails in previous step because of root user so we run it manually
+RUN npm run postinstall
 RUN npm run flow
 RUN npm run unit
 RUN npm run build:prod
